# google-code-jam

16-1A/: gcj-R1A.cabal  run.sh
16-1A/app/: Main.hs
16-1A/src/: Q1.hs  Q2.hs  Q3.hs
16-1B/: a.m
16-1C/: Makefile  Q2.cpp
16-qual/: Makefile  c.cpp
17-1A/: A.rs  C.rs  Cargo.toml
17-1C/: A.rs  Cargo.toml
17-qual/: .gitignore  A.rs  B.rs  C.rs  Cargo.toml  run
