name:                gcj-R1A
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/foriequal0/gcj-R1A#readme
license:             BSD3
license-file:        LICENSE
author:              SeongChan Lee
maintainer:          foriequal@gmail.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Q1, Q2, Q3
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.6 && < 0.6
  default-language:    Haskell2010

executable gcj-R1A-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gcj-R1A
  default-language:    Haskell2010

test-suite gcj-R1A-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gcj-R1A
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/foriequal0/gcj-R1A
